[project]
name = "cyclotron-std"
version = "2.0.0"
description = "Standard library drivers and components for cyclotron"
readme = "README.rst"
requires-python = ">=3.7"
license = {file = "LICENSE.txt"}
keywords = ["reactivex", "cyclotron", "cyclejs"]
authors = [
  {email = "romain.picard@oakbits.com"},
  {name = "Romain Picard"}
]
classifiers = [
  'Development Status :: 5 - Production/Stable',
  'Intended Audience :: Developers',
  'Programming Language :: Python :: 3',
]

dependencies = [
  'reactivex~=4.0',
  'cyclotron~=2.0',
]

[project.optional-dependencies]
test = [
  "pytest",
]

[project.urls]
repository = "https://github.com/MainRo/cyclotron-std.git"
